--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libbruteforce =  { path = "../libbruteforce" }
+libbruteforce = "1.0.1"
+# libbruteforce =  { path = "../libbruteforce" }
