--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "bruteforcer"
-version = "1.0.1"
+version = "0.1.0"
 authors = ["Philipp Schuster <phip1611@gmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# libbruteforce = "2.0.0"
-libbruteforce =  { path = "../libbruteforce" }
+libbruteforce = "4.0.1"
+# libbruteforce =  { path = "../libbruteforce" }
 simple_logger = "2.1.0"
 log = "0.4.14"
 
